--- a/index.html
+++ b/index.html
@@ -1,71 +1,62 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Class by benhowdle89</title>
+<head>
 
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-  </head>
-  <body>
-    <div class="wrapper">
-      <header>
-        <h1>Class</h1>
-        <p>Simple, elegant inheritance for your JavaScript</p>
+  <meta name="description" content="Class.js - simple, elegant inheritance for your JavaScript" />
 
-        <p class="view"><a href="https://github.com/benhowdle89/Class">View the Project on GitHub <small>benhowdle89/Class</small></a></p>
+  <meta charset=utf-8 />
+  <title>Class.js - simple, elegant inheritance for your JavaScript</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
 
+<header>
+  <div class="wrap">
+    <h1><a href="/">Class.js</a></h1>
+    <span>simple, elegant inheritance for your JavaScript</span>
+    <div class="clearfix"></div>
+  </div>
+</header>
 
-        <ul>
-          <li><a href="https://github.com/benhowdle89/Class/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/benhowdle89/Class/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/benhowdle89/Class">View On <strong>GitHub</strong></a></li>
-        </ul>
-      </header>
-      <section>
-        <h3>
-<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+<div class="wrap">
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+  <div class="centerChildren">
+    <a class="button center" href="https://github.com/benhowdle89/Class">GitHub</a>
+    <a class="button center" href="https://github.com/benhowdle89/Class/archive/gh-pages.zip">Download</a>
+  </div>
 
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
+  <ul>
+    <li><b>Allows inheritance through a convenient .extend() method.</b></li>
+    <li>Plays nicely with AMD (require.js for example) or CommonJS.</li>
+    <li>Works either in the browser (one Class global variable) or in a Node environment through module.exports.</li>
+    <li><strong>File size: </strong>Less than 1 kb</li>
+  </ul>
 
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
+  <hr />
 
-<h3>
-<a name="designer-templates" class="anchor" href="#designer-templates"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
+  <h3>Usage</h3>
 
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
+  <script src="https://gist.github.com/benhowdle89/78a6958e22f641cd561b.js"></script>
 
-<h3>
-<a name="rather-drive-stick" class="anchor" href="#rather-drive-stick"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
+  <h3>Example</h3>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+  <script src="https://gist.github.com/benhowdle89/77c58f6922d0a1e31c44.js"></script>
 
-<h3>
-<a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+  <div class="centerChildren">
+    <a class="button center" href="https://github.com/benhowdle89/Class">GitHub</a>
+    <a class="button center" href="https://github.com/benhowdle89/Class/archive/gh-pages.zip">Download</a>
+  </div>
 
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+</div>
 
-<h3>
-<a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
+</div>
+<footer>
+  <hr />
+  <div class="wrap">
+    <p class="fLeft">Made by <a href="http://benhowdle.im">Ben Howdle</a></p>
+    <p class="fRight"><a class="btn" href="https://twitter.com/intent/tweet?text=Class.js - simple, elegant inheritance for your JavaScript&url=http://benhowdle.im/Class/" target="_BLANK">Tweet &rarr;</a></p>
+  </div>
+</div>
 
-<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
-      </section>
-      <footer>
-        <p>This project is maintained by <a href="https://github.com/benhowdle89">benhowdle89</a></p>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
-      </footer>
-    </div>
-    <script src="javascripts/scale.fix.js"></script>
-    
-  </body>
+</body>
 </html>
