--- a/index.html
+++ b/index.html
@@ -37,6 +37,12 @@
   <h3>Usage</h3>
 
   <script src="https://gist.github.com/benhowdle89/78a6958e22f641cd561b.js"></script>
+  
+  <p>If you'd like to use Class.js in a Node environment, you can install it using [npm](https://npmjs.org/package/node-classjs):</p>
+  
+  `npm install node-classjs`
+  
+  `var Class = require('node-classjs');`
 
   <h3>Example</h3>
 
