--- a/index.html
+++ b/index.html
@@ -38,11 +38,9 @@
 
   <script src="https://gist.github.com/benhowdle89/78a6958e22f641cd561b.js"></script>
   
-  <p>If you'd like to use Class.js in a Node environment, you can install it using [npm](https://npmjs.org/package/node-classjs):</p>
+  <p>If you'd like to use Class.js in a Node environment, you can install it using <a href="https://npmjs.org/package/node-classjs">npm</a>:</p>
   
-  `npm install node-classjs`
-  
-  `var Class = require('node-classjs');`
+  <script src="https://gist.github.com/benhowdle89/3046758622782c96ba43.js"></script>
 
   <h3>Example</h3>
 
